2009-09-20 Fix off-by-one error in dviread.Tfm, and additionally protect
           against exceptions in case a dvi font is missing some metrics - JKS

2009-09-15 Don't fail on AFM files containing floating-point bounding boxes - JKS

2009-08-06 Tagging the 0.99.0 release at svn r7397 - JDH

	   * fixed an alpha colormapping bug posted on sf 2832575

	   * fix typo in axes_divider.py. use nanmin, nanmax in angle_helper.py
             (patch by Christoph Gohlke)

	   * remove dup gui event in enter/leave events in gtk

	   * lots of fixes for os x binaries (Thanks Russell Owen)

	   * attach gtk events to mpl events -- fixes sf bug 2816580

	   * applied sf patch 2815064 (middle button events for wx) and
             patch  2818092 (resize events for wx)

	   * fixed boilerplate.py so it doesn't break the ReST docs.

	   * removed a couple of cases of mlab.load

	   * fixed rec2csv win32 file handle bug from sf patch 2831018

	   * added two examples from Josh Hemann: examples/pylab_examples/barchart_demo2.py
             and examples/pylab_examples/boxplot_demo2.py

	   * handled sf bugs 2831556 and 2830525; better bar error messages and
             backend driver configs

	   * added miktex win32 patch from sf patch 2820194

	   * apply sf patches 2830233 and 2823885 for osx setup and 64 bit;  thanks Michiel

2009-08-03 Fixed boilerplate.py so it doesn't break the ReST docs. - JKS

2009-08-03 pylab no longer provides a load and save function.  These
           are available in matplotlib.mlab, or you can use
           numpy.loadtxt and numpy.savetxt for text files, or np.save
           and np.load for binary numpy arrays. - JDH

2009-07-31 Tagging 0.99.0.rc1 at 7314 - MGD

2009-07-30 Add set_cmap and register_cmap, and improve get_cmap,
           to provide convenient handling of user-generated
           colormaps. Reorganized _cm and cm modules. - EF

2009-07-28 Quiver speed improved, thanks to tip by Ray Speth. -EF
